enchanced task for workshop

--- a/for-kilo/Задание.md
+++ b/for-kilo/Задание.md
@@ -2,10 +2,17 @@
 
 У нас будет:
 
-1. Темная тема
-2. Возможность накапливать историю буффера обмена -- в localStaorage
+0. Работа в сайдбаре - клик на иконку будет открывать плагин в сайдбаре
+1. Возможность накапливать историю буффера обмена -- в localStorage
+    1.1 Рефакторинг
+2. Темная тема
 3. Возможность скопировать обратно в буффер обмена значение 
+    3.1 Рефакторинг
 4. Возможность делать "Избранные" 
-5. Работа в сайдбаре
+    4.1 Рефакторинг
+5. Возможность настраивать исключения
+    5.1 Рефакторинг
 6. Страница настроек для удаления истории и настройки исключений
+    6.1 Рефакторинг
 7. Возможность поиска
+    7.1 Рефакторинг
